--- a/CWAC19Aclu-Mo/appsettings.json
+++ b/CWAC19Aclu-Mo/appsettings.json
@@ -1,8 +1,22 @@
 {
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.mailgun.org",
+    "SmtpPort": 465,
+    "SmtpUsername": "postmaster@sandbox3defb5b6274c4c0eafb752cb423d699b.mailgun.org",
+    "SmtpPassword": "d6d646a21c15eda000610e5709a835ac-9ce9335e-35d700bb",
+
+    "PopServer": "popserver",
+    "PopPort": 995,
+    "PopUsername": "postmaster@sandbox3defb5b6274c4c0eafb752cb423d699b.mailgun.org",
+    "PopPassword": "d6d646a21c15eda000610e5709a835ac-9ce9335e-35d700bb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CWAC19AcluMoContext": "Server=(localdb)\\mssqllocaldb;Database=CWAC19AcluMoContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
