Emails work, switched to Amazon SES

--- a/CWAC19Aclu-Mo/appsettings.json
+++ b/CWAC19Aclu-Mo/appsettings.json
@@ -1,9 +1,9 @@
 {
   "EmailConfiguration": {
-    "SmtpServer": "smtp.mailgun.org",
-    "SmtpPort": 465,
-    "SmtpUsername": "postmaster@sandbox3defb5b6274c4c0eafb752cb423d699b.mailgun.org",
-    "SmtpPassword": "d6d646a21c15eda000610e5709a835ac-9ce9335e-35d700bb",
+    "SmtpServer": "email-smtp.us-east-1.amazonaws.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "AKIAJJQLYXQNQSN6IQIA",
+    "SmtpPassword": "BIsutCxBuftdqNcokQjJ0Gokttckf5r7m8nMrxqZl7Ja",
 
     "PopServer": "popserver",
     "PopPort": 995,
