Added Identity for basic authentication

--- a/CWAC19Aclu-Mo/appsettings.json
+++ b/CWAC19Aclu-Mo/appsettings.json
@@ -4,7 +4,6 @@
     "SmtpPort": 587,
     "SmtpUsername": "AKIAJJQLYXQNQSN6IQIA",
     "SmtpPassword": "BIsutCxBuftdqNcokQjJ0Gokttckf5r7m8nMrxqZl7Ja",
-
     "PopServer": "popserver",
     "PopPort": 995,
     "PopUsername": "postmaster@sandbox3defb5b6274c4c0eafb752cb423d699b.mailgun.org",
@@ -17,6 +16,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CWAC19AcluMoContext": "Server=(localdb)\\mssqllocaldb;Database=CWAC19AcluMoContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CWAC19AcluMoContext": "Server=(localdb)\\mssqllocaldb;Database=CWAC19AcluMoContext;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AppUserContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CWAC19AcluMoContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
